--- a/static/less/fonts.less
+++ b/static/less/fonts.less
@@ -1,4 +1,4 @@
-@font-folder: "plugins/nodebb-plugin-katex/static/fonts";
+@font-folder: "plugins/nodebb-plugin-katex/fonts";
 @use-eot: true;
 @use-ttf: true;
 @use-woff: true;
@@ -55,11 +55,11 @@
 .font-face('Main', bold, normal);
 .font-face('Main', normal, italic);
 .font-face('Main', normal, normal);
-.font-face('Math', bold, italic);
+// .font-face('Math', bold, italic);
 .font-face('Math', normal, italic);
-.font-face('Math', normal, normal);
-.font-face('SansSerif', bold, normal);
-.font-face('SansSerif', normal, italic);
+// .font-face('Math', normal, normal);
+// .font-face('SansSerif', bold, normal);
+// .font-face('SansSerif', normal, italic);
 .font-face('SansSerif', normal, normal);
 .font-face('Script', normal, normal);
 .font-face('Size1', normal, normal);
